--- a/_typos.toml
+++ b/_typos.toml
@@ -13,6 +13,9 @@ dot_acn = ".acn"
 dot_fot = ".fot"
 dot_ist = ".ist"
 MERCHANTIBILITY = "MERCHANTIBILITY"
+Wnt = "Wnt"
+Sebastiaan = "Sebastiaan"
+Thi = "Thi"
 
 [files]
 extend-exclude = [
